# what-else-should-I-read

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  book_recommendation_system_eda.ipynb  fly.toml  main.py  pyproject.toml  render.yaml  requirements.txt  train_data.csv  user_encoder.pkl
app/: api_item_cf_models.py  app.py  deploy.py  requirements.txt
app/models/: nn_index.pkl
models/: item_encoder.pkl  svd_model.pkl
notebooks/: book_recommendation_system_eda.ipynb  collaborative_filtering.ipynb  content_based_filtering.ipynb
report_presentation/presentation_latex/: presentation.tex  presentation_main.tex  presentation_setup.tex
report_presentation/presentation_latex/theme/: beamerthemeCleanEasy.sty
report_presentation/report_latex/: book_recommender_report.tex  report_main.tex  report_setup.tex
src/: dataloader.py  item_cf.py  missing_values.py  plots.py  preprocess_location.py  preprocess_user_books_ratings.py  unique_values.py  user_cf.py
