[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "what_else_should_i_read"
version = "0.1.0"
description = "Book recommendation system"
authors = [{ name = "Milos" }]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]